Update Hero Profile page with Confirm Sale modal layout, styles and scripts

--- a/package.json
+++ b/package.json
@@ -8,13 +8,17 @@
   "license": "MIT",
   "private": true,
   "devDependencies": {
+    "@babel/core": "^7.10.3",
+    "@babel/preset-env": "^7.10.3",
     "browser-sync": "^2.26.7",
     "del": "^5.1.0",
     "gulp": "^4.0.2",
     "gulp-autoprefixer": "^7.0.1",
+    "gulp-babel": "^8.0.0",
     "gulp-rename": "^2.0.0",
     "gulp-sass": "^4.1.0",
     "gulp-sourcemaps": "^2.6.5",
+    "gulp-uglify-es": "^2.0.0",
     "require-dir": "^1.2.0",
     "slash": "^3.0.0"
   }
