--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "gulp-sass": "^4.1.0",
     "gulp-sourcemaps": "^2.6.5",
     "gulp-uglify-es": "^2.0.0",
+    "node-sass": "^4.14.1",
     "require-dir": "^1.2.0",
     "slash": "^3.0.0"
   }
